# ospSensei

./: .gitignore  CMakeLists.txt  FILES  README.md  go.sh
app/mandelbrot/: mandelbrot.cpp
app/nbody/: nbody.cpp  nbody.xml
include/ospSensei/: OSPRayParticleVisualization.h  OSPRayUnstructuredVolumeVisualization.h  OSPRayVisualization.h  OSPRayVisualizationBase.h
include/plugin_sensei/: OSPRayStudioVisualization.h
nbody/: CMakeLists.txt  nbody.c  nbody.cpp  nbody.xml
src/: OSPRayStudioVisualization.cpp  plugin_sensei.cpp
src/ospSensei/: OSPRayParticleVisualization.cpp  OSPRayUnstructuredVolumeVisualization.cpp  OSPRayVisualization.cpp
tools/docker/: Dockerfile
